# AID-THAID-Implementation

./: .gitignore  README.md
AID/python/: aid.py  pyAID.py  test_aid.py
AID/python/pyAID/: README.md  profile.out  pyproject.toml
AID/python/pyAID/examples/: profile_fit.py
AID/python/pyAID/pyAID/: __init__.py  aid.py  metrics.py  plotting.py  tree.py  utils.py
AID/python/pyAID/pyAID.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AID/python/pyAID/tests/: test_core.py  test_end_to_end.py  test_splits.py
AID/r/: aid.R  test_aid.R
AID/r/RAID/: DESCRIPTION  NAMESPACE  README.Rmd
AID/r/RAID/R/: aid.R  plotting.R  tree.R  utils.R
AID/r/RAID/man/: aid_regressor.Rd  ensure_matrix.Rd  find_best_split.Rd  new_node.Rd  plot_aid_split.Rd  plot_aid_tree.Rd  predict_aid.Rd  sse_from_stats.Rd
AID/r/RAID/tests/testthat/: test_core.R  test_end_to_end.R  test_splits.R
AID/r/RAID/vignettes/: AID_examples.Rmd  AID_introduction.Rmd
THAID/python/: test_thaid.py  thaid.py
THAID/r/: test_thaid.R  thaid.R
docs/: mathematical_foundation.md
notebooks/: pyAID.ipynb  thaid_demo.ipynb
tests/: thaid_test.ipynb
