[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyAID"
version = "0.1.0"
description = "Implémentation de l’algorithme AID (Automatic Interaction Detection) pour la régression."
authors = [{ name = "DJERI-ALASSANI OUBENOUPOU", email = "djeryala@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20", "matplotlib>=3.5"]
